[package]
name = "rust-072"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
axum-tracing-opentelemetry = "0.12.0"
init-tracing-opentelemetry = {version = "0.12.0", features=["otlp", "tracing_subscriber_ext"] }

#axum-tracing-opentelemetry = { path = "../../axum-tracing-opentelemetry" }
#init-tracing-opentelemetry = { path = "../../init-tracing-opentelemetry", features = [
#  "otlp",
#  "tracing_subscriber_ext",
#] }

opentelemetry = { version = "0.19", features = ["rt-tokio"] }
serde_json = "1.0.79"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-opentelemetry-instrumentation-sdk = "0.12.0"
#tracing-opentelemetry-instrumentation-sdk = { path = "../../tracing-opentelemetry-instrumentation-sdk" }